<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialogModel"
            type="com.asimgasimzade.mastermind.data.model.DialogModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <ImageView
            android:id="@+id/dialog_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/dialog_image_content_description"
            android:src="@{dialogModel.drawableResource}"
            app:layout_constraintBottom_toTopOf="@id/dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@{dialogModel.title}"
            android:textColor="@{dialogModel.titleColor}"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/dialog_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_image"
            tools:text="@string/win_dialog_title"
            tools:textColor="@color/green" />

        <TextView
            android:id="@+id/dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{dialogModel.text}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_title"
            tools:text="@string/win_dialog_text" />

        <Button
            android:id="@+id/dialog_button_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#9C27B0"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/dialog_button_leave"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_text" />

        <Button
            android:id="@+id/dialog_button_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="#FF5722"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/dialog_button_play_again"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>